--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <div class="slide-left">
                 <h1>
                     <span>Quality</span> Products</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate non explicabo nesciunt obcaecati atque
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate non explicabo nesciunt
+                    obcaecati atque
                     quisquam architecto, dicta beatae ipsam quidem aut reiciendis maiores expedita.</p>
                 <button>Buy Now</button>
             </div>
@@ -70,8 +71,10 @@
         <div class="description-container">
             <div class="slide-up">
                 <h1>Couches for your Family</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate non explicabo nesciunt obcaecati atque
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate non explicabo nesciunt
+                    obcaecati atque
                     quisquam architecto, dicta beatae ipsam quidem aut reiciendis maiores expedita.</p>
+                <button>Pick Your Style</button>
             </div>
         </div>
     </section>
